[gd_scene load_steps=22 format=3 uid="uid://be4gwtu23s7n6"]

[ext_resource type="Script" uid="uid://bk8wygn2yqos2" path="res://scripts/ui/player_ui/player_ui.gd" id="1_hrok7"]
[ext_resource type="Texture2D" uid="uid://dbsmskknn0g4d" path="res://assets/ui/border/border_left.png" id="2_dn77d"]
[ext_resource type="Texture2D" uid="uid://ugerup4eqx16" path="res://assets/ui/border/border_top.png" id="3_eo4gi"]
[ext_resource type="Script" uid="uid://g4jr7ixl7hs4" path="res://scenes/ui/player_ui/clock_container.gd" id="3_g2gjf"]
[ext_resource type="Texture2D" uid="uid://dd80msrdcnci" path="res://assets/ui/look_bg.png" id="3_m8cl3"]
[ext_resource type="Texture2D" uid="uid://crhvdt3srw8wq" path="res://assets/ui/clock_round.png" id="4_g2gjf"]
[ext_resource type="Texture2D" uid="uid://dsipvhwg22ng4" path="res://assets/ui/border/border_bottom.png" id="4_mj2yk"]
[ext_resource type="Script" uid="uid://c8l2kw4kej00a" path="res://scripts/ui/player_ui/stance_bar.gd" id="5_1ek40"]
[ext_resource type="PackedScene" uid="uid://cdditl3ld2caa" path="res://scenes/ui/player_ui/minimap/minimap.tscn" id="5_35xku"]
[ext_resource type="Texture2D" uid="uid://d3fq1bhbxa7r1" path="res://assets/ui/border/sidebar.png" id="5_ixohn"]
[ext_resource type="Script" uid="uid://dobnprsw10nxm" path="res://scripts/ui/player_ui/inventory.gd" id="6_23jyl"]
[ext_resource type="Script" uid="uid://2tj2dlsumkbw" path="res://scenes/ui/player_ui/buffs_container.gd" id="7_81j3l"]
[ext_resource type="Texture2D" uid="uid://cs7u74l184ia7" path="res://assets/ui/status/status_progess_bar.png" id="9_eo4gi"]
[ext_resource type="Script" uid="uid://vyyh35d6fewu" path="res://scripts/ui/player_ui/status_bar.gd" id="9_mj2yk"]
[ext_resource type="PackedScene" uid="uid://cxi61x40xqu63" path="res://scenes/ui/player_ui/equipment_tab/equipment_tab.tscn" id="10_84420"]
[ext_resource type="Texture2D" uid="uid://c6m7gpv0ao6l3" path="res://assets/ui/inventory/inventory_background.png" id="14_mj2yk"]

[sub_resource type="LabelSettings" id="LabelSettings_ixohn"]
font_size = 9
font_color = Color(0.0627451, 0.329412, 0.054902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eo4gi"]
font_size = 9
font_color = Color(0.0627451, 0.329412, 0.054902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mj2yk"]
font_size = 9
font_color = Color(0.0627451, 0.329412, 0.054902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gfd5x"]
font_size = 9
font_color = Color(0.0627451, 0.329412, 0.054902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nhaou"]
font_size = 9
font_color = Color(0.0627451, 0.329412, 0.054902, 1)

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_hrok7")

[node name="Boder" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Boder"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 360.0
texture = ExtResource("2_dn77d")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Boder"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 32.0
texture = ExtResource("3_eo4gi")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Boder"]
layout_mode = 0
offset_top = 328.0
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("4_mj2yk")
expand_mode = 2

[node name="StatusBar" type="HBoxContainer" parent="."]
z_index = 1
offset_left = 80.0
offset_top = 328.0
offset_right = 309.0
offset_bottom = 360.0
theme_override_constants/separation = 0
script = ExtResource("9_mj2yk")

[node name="HpAndStamina" type="Control" parent="StatusBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HPText" type="Label" parent="StatusBar/HpAndStamina"]
layout_mode = 0
offset_right = 22.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 9
text = "HP:"
label_settings = SubResource("LabelSettings_ixohn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPProgress" type="TextureProgressBar" parent="StatusBar/HpAndStamina"]
layout_mode = 0
offset_left = 22.0
offset_top = 1.0
offset_right = 70.0
offset_bottom = 15.0
max_value = 1.0
step = 0.1
value = 1.0
texture_progress = ExtResource("9_eo4gi")

[node name="HPValue" type="Label" parent="StatusBar/HpAndStamina"]
layout_mode = 0
offset_left = 72.0
offset_right = 112.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 9
text = "999/999"
label_settings = SubResource("LabelSettings_eo4gi")
vertical_alignment = 1

[node name="StaminaText" type="Label" parent="StatusBar/HpAndStamina"]
layout_mode = 0
offset_top = 16.0
offset_right = 22.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 9
text = "ST:"
label_settings = SubResource("LabelSettings_mj2yk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaProgress" type="TextureProgressBar" parent="StatusBar/HpAndStamina"]
layout_mode = 0
offset_left = 22.0
offset_top = 17.0
offset_right = 70.0
offset_bottom = 31.0
max_value = 1.0
step = 0.1
value = 1.0
texture_progress = ExtResource("9_eo4gi")

[node name="StaminaValue" type="Label" parent="StatusBar/HpAndStamina"]
layout_mode = 0
offset_left = 72.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 9
text = "999/999"
label_settings = SubResource("LabelSettings_gfd5x")
vertical_alignment = 1

[node name="Capacity" type="Control" parent="StatusBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WeaponCapacityText" type="Label" parent="StatusBar/Capacity"]
layout_mode = 0
offset_right = 22.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 9
text = "WC:"
label_settings = SubResource("LabelSettings_nhaou")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaponCapacityprogress" type="TextureProgressBar" parent="StatusBar/Capacity"]
layout_mode = 0
offset_left = 22.0
offset_top = 1.0
offset_right = 70.0
offset_bottom = 15.0
max_value = 1.0
step = 0.1
value = 1.0
texture_progress = ExtResource("9_eo4gi")

[node name="WeaponCapacityvalue" type="Label" parent="StatusBar/Capacity"]
layout_mode = 0
offset_left = 72.0
offset_right = 112.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 9
text = "999/999"
label_settings = SubResource("LabelSettings_nhaou")
vertical_alignment = 1

[node name="ArmorCapacityText" type="Label" parent="StatusBar/Capacity"]
layout_mode = 0
offset_top = 16.0
offset_right = 22.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 9
text = "AC:"
label_settings = SubResource("LabelSettings_nhaou")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ArmorCapacityProgress" type="TextureProgressBar" parent="StatusBar/Capacity"]
layout_mode = 0
offset_left = 22.0
offset_top = 17.0
offset_right = 70.0
offset_bottom = 31.0
max_value = 1.0
step = 0.1
value = 1.0
texture_progress = ExtResource("9_eo4gi")

[node name="ArmorCapacityValue" type="Label" parent="StatusBar/Capacity"]
layout_mode = 0
offset_left = 72.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 9
text = "999/999"
label_settings = SubResource("LabelSettings_nhaou")
vertical_alignment = 1

[node name="SideBar" type="TextureRect" parent="."]
offset_left = 512.0
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("5_ixohn")
expand_mode = 1

[node name="ClockContainer" type="Control" parent="SideBar" node_paths=PackedStringArray("time_label")]
clip_contents = true
custom_minimum_size = Vector2(47.5, 47.5)
layout_mode = 2
anchors_preset = 0
offset_left = 15.0
offset_top = 1.0
offset_right = 112.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_g2gjf")
time_label = NodePath("../TimeLabel")

[node name="Clock" type="TextureRect" parent="SideBar/ClockContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.5
offset_right = 48.5
offset_bottom = 97.0
grow_horizontal = 2
pivot_offset = Vector2(49, 50)
texture = ExtResource("4_g2gjf")
expand_mode = 1

[node name="TimeLabel" type="Label" parent="SideBar"]
editor_description = "dynamic display is handled in clock container's script "
layout_mode = 2
offset_left = 15.0
offset_top = 56.0
offset_right = 112.0
offset_bottom = 80.0
text = "TimeLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLog" type="RichTextLabel" parent="SideBar"]
layout_mode = 0
offset_top = 196.0
offset_right = 128.0
offset_bottom = 360.0
theme_override_font_sizes/normal_font_size = 5
vertical_alignment = 2

[node name="Minimap" parent="SideBar" instance=ExtResource("5_35xku")]
layout_mode = 1
anchor_top = 0.267
anchor_right = 1.0
anchor_bottom = 0.531
offset_left = 4.0
offset_top = -13.12
offset_right = 4.0
offset_bottom = -17.16

[node name="LookUI" type="TextureRect" parent="."]
visible = false
offset_left = 424.0
offset_top = 96.0
offset_right = 552.0
offset_bottom = 272.0
texture = ExtResource("3_m8cl3")

[node name="TargetTileTexture" type="TextureRect" parent="LookUI"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 64.0
stretch_mode = 5

[node name="Name" type="Label" parent="LookUI"]
layout_mode = 0
offset_left = 40.0
offset_top = 72.0
offset_right = 88.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="LookUI"]
layout_mode = 0
offset_left = 8.0
offset_top = 95.0
offset_right = 120.0
offset_bottom = 168.0
theme_override_font_sizes/normal_font_size = 7

[node name="BottomBar" type="TextureRect" parent="."]
visible = false
offset_left = 96.0
offset_top = 176.0
offset_right = 352.0
offset_bottom = 216.0

[node name="StanceBar" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = 232.0
offset_right = 448.0
offset_bottom = 272.0
script = ExtResource("5_1ek40")

[node name="StanceContainer" type="HBoxContainer" parent="StanceBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="Control" parent="."]
visible = false
z_index = 50
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 624.0
offset_bottom = 344.0
script = ExtResource("6_23jyl")

[node name="Background" type="TextureRect" parent="Inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_mj2yk")

[node name="FilterContainer" type="HBoxContainer" parent="Inventory"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.315789
anchor_right = 1.0
anchor_bottom = 0.0304878
offset_bottom = 24.0
grow_horizontal = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TabName" type="Label" parent="Inventory"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.526
anchor_top = 0.122
anchor_right = 0.783
anchor_bottom = 0.22
offset_left = 0.191986
offset_top = -0.0159988
offset_right = -0.0640259
offset_bottom = -0.160004
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemsContainer" type="VBoxContainer" parent="Inventory"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.434
anchor_top = 0.244
anchor_right = 1.0
anchor_bottom = 0.976
offset_left = 0.127991
offset_top = -0.0320053
offset_bottom = -0.128021

[node name="EquipmentTab" parent="Inventory" instance=ExtResource("10_84420")]
layout_mode = 1
offset_left = 9.6
offset_top = -2.384
offset_right = 217.6
offset_bottom = 261.616

[node name="BuffsContainer" type="HBoxContainer" parent="."]
offset_left = 136.0
offset_top = 296.0
offset_right = 480.0
offset_bottom = 320.0
script = ExtResource("7_81j3l")

[node name="Buffs" type="HBoxContainer" parent="BuffsContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Debuffs" type="HBoxContainer" parent="BuffsContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="PassivesContainer" type="HBoxContainer" parent="."]
offset_left = 160.0
offset_top = 272.0
offset_right = 456.0
offset_bottom = 296.0
alignment = 1
